# Loan-approval

./: .dockerignore  .env.example  .gitignore  DOCKER_DEPLOYMENT_SUMMARY.md  DOCKER_HUB_DEPLOYMENT.md  DOCKER_UPDATE_REPORT.md  Dockerfile  QUICK_START.md  README.md  best_params.json  cb_person_default_on_file_encoder_classes.json  docker-compose.prod.yml  docker-compose.yml  docker-manage.bat  docker-manage.sh  hyperopt_trials.pkl  loan_intent_encoder_classes.json  person_home_ownership_encoder_classes.json  preprocessing.py  pyproject.toml  requirements.txt  retrain_fixed_model.py  sweetviz_report.html  test_complete_id_handling.py  test_data.csv  test_prediction.json  threshold_results.csv  verify-docker-deployment.sh
app/: __init__.py  main.py  model.py  preprocessing.py  tasks.py  utils.py
app/models/: model_20250810_184750_e77bb42d.pkl  model_20250815_120833_29876029.pkl  model_20250815_120834_911d1576.pkl  model_20250815_204335_69618b72.pkl  model_20250815_204411_11639a3a.pkl  model_20250815_204558_dfd4d9c0.pkl  model_20250815_211654_d0fdbc76.pkl
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml
data/: test_sample.csv  test_training_data.csv  train_70_percent.csv
models/: hyperopt_trials_0c1f61ec-5ff6-4fc3-84da-7811673cb01d_hyperopt.pkl  hyperopt_trials_2a8933ad-b15d-40c1-9dc0-dc67c0984d4c_hyperopt.pkl  hyperopt_trials_33cc5fdb-15ea-47b0-9110-2c668064ba98_hyperopt.pkl  hyperopt_trials_63da1a2f-c4bb-4ec9-8677-0e586381887a_hyperopt.pkl  hyperopt_trials_6e3bbf28-c79d-4989-a964-bc758fd2b381_hyperopt.pkl  hyperopt_trials_86e01ecd-0ef2-4f65-b72b-68bccaa18299_hyperopt.pkl  hyperopt_trials_97aaeab0-b591-40a3-8a1e-ec4ebadc3163_hyperopt.pkl  hyperopt_trials_af2d6798-9e8a-44a1-9e78-d958428bb80c_hyperopt.pkl  hyperopt_trials_b00f0c2f-3ae4-4186-a19b-8a5a06d0da62_hyperopt.pkl  hyperopt_trials_bb9de713-1f52-42ae-bd98-57ccef95e7ad_hyperopt.pkl  hyperopt_trials_c41a6a33-ef89-4ead-8942-251ac7c2a035_hyperopt.pkl  hyperopt_trials_c4befdb5-a6da-4b3f-8c8c-dfbcfea5be02_hyperopt.pkl  hyperopt_trials_fa435b9f-206d-4dd5-9d79-5d5c27e015cd_hyperopt.pkl
notebooks/: EDA.ipynb  README.md  automl.ipynb  project_cleanup.ipynb  test.ipynb
notebooks/archived_docs/: API_OPTIMIZATION_SUMMARY.md  CLEANUP.md  DOCKER_GUIDE.md  PRODUCTION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  SUMMARY.md
notebooks/docker_configs/: .env.prod.example  Dockerfile.prod  deploy-prod.bat  docker-compose.dev.yml  docker-compose.prod.yml  nginx.conf  prod-manage.bat
outputs/reports/: complete_model_evaluation_report.json  comprehensive_performance_analysis.json
scripts/: debug_api_preprocessing.py  debug_features.py  debug_features_simple.py  hyperopt_standalone.py  run_hyperopt_training.py  shap_results.csv  test_api_comprehensive.py  test_batch_api.py  test_batch_predict.csv  test_batch_requests.csv  test_fixed_onehot.py  test_model_compatibility.py  test_new_model.py  test_new_model_api.py  test_shap_batch.csv  test_shap_endpoints.py  test_single_predict.py  train_fixed_model.py
test/: test_docker_updates.py  test_id_handling.py
